[package]
name = "libmdbx"
version = "1.0.0"
edition = "2021"
description = "Idiomatic and safe MDBX wrapper"
license = "Apache-2.0"


[dependencies]
ffi = { package = "mdbx-sys", version = "=13.8.0" }
bitflags = "2.4"
byteorder = "1"
derive_more = { version = "2", default-features = false, features = ["full"] }
parking_lot = "0.12"
smallvec = "1"
thiserror = "2"
tracing = "0.1.0"
dashmap = { version = "6", features = ["inline"], optional = true }

[features]
default = []
return-borrowed = []
read-tx-timeouts = ["dep:dashmap"]

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "2.7" }
rand = "0.9"
tempfile = "*"
